# kpi-data-generator

./: .gitignore  README.md  pyproject.toml
scripts/: paths.py
src/core/clients/: domain_mgmt.py
src/core/configs/: cfg.py
src/core/tests/: test_kpi_list.py  test_kpi_profile.py  test_model_definition.py  test_query_model.py
src/core/utils/: helpers.py  paths.py
