[project]
name = "kpi-data-generator"
version = "0.1.0"
description = "Synthetic data generator for KPIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.4",
    "mysql-connector-python>=9.3.0",
    "openai>=1.97.0",
    "python-arango>=8.2.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core"] 
